Revision history for {{$dist->name}}

{{$NEXT}}
          stacktrace removed from exception when a plugin's minimum version
          check fails

4.300030  2013-01-30 22:25:27 America/New_York
          listdeps --versions now sorts properly (thanks, Karen Etheridge!)

          delay loading more libraries until needed (thanks, Olivier Mengué!)

          excluded filenames in GatherDir were sometimes matched too fuzzily
          (thanks, Mike Doherty)

4.300029  2013-01-14 20:03:15 America/New_York
          allow :version directive in root section to require a given version
          of Dist::Zilla

          simply and speedify some of GatherDir (Thanks, Olivier Mengué!)

4.300028  2012-10-19 10:50:42 America/New_York
          when picking modules to treat as "part of the dist," be more lax in
          understanding libraries under ./t:  ./t/lib/Foo.pm is now treated as
          providing t::lib::Foo, lib::Foo, and Foo

4.300027  2012-10-16 21:07:06 America/New_York
          the "latest" symlink code broke Dist::Zilla on win32; fixed now!
          (thanks, Brendan Byrd!)

4.300026  2012-10-13 22:21:17 America/New_York
          PodSyntaxTests, PodCoverageTests and MetaTests now add the right
          develop/requires prereqs (thanks, Olivier Mengué and Ricardo Signes!)

          ModuleBuild now takes an mb_lib argument that can override the
          default of "inc" (thanks, ben hengst)

          create .build/latest symlink when a build in .build is built (thanks,
          Alexei Znamensky!)

          allow "-version" arg to [@Filter] to specify the version of the
          bundle required (thanks, Rob Hoelz)

4.300025  2012-10-07 23:02:33 America/New_York
          add the LicenseProvider and NameProvider roles (thanks, Vyacheslav
          Matjukhin!)

          make Dist::Zilla::App::Tester be a CaptureExternal App::Cmd::Tester

4.300024  2012-09-26 12:01:45 America/New_York
          include $] in MetaConfig data
