@@ -2,7 +2,10 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
           stacktrace removed from exception when a plugin's minimum version
-          check fails
+          check fails (thanks, Karen Etheridge!)
+
+          add 'dzil listdeps --json', which lists all prerequisites broken up
+          by phase and type, in readable JSON format (thanks, Karen Etheridge!)
 
 4.300030  2013-01-30 22:25:27 America/New_York
           listdeps --versions now sorts properly (thanks, Karen Etheridge!)
